# Hackathon

./: CMakeLists.txt  README.md
src/engineTester/: MainGameLoop.cpp
src/entities/: Camera.cpp
src/models/: TexturedModel.h
src/renderEngine/: EntityRenderer.cpp  MasterRenderer.cpp  MasterRenderer.h
src/shaders/: StaticShader.cpp  StaticShader.h  TerrainShader.cpp  TerrainShader.h  terrainFragmentShader.glsl  terrainVertexShader.glsl  vertexShader.glsl
src/textures/: ModelTexture.cpp  ModelTexture.h
